crates/lang/macro/tests/ui/trait_def/fail/config_namespace_invalid_2.stderr
error: ink! config options require an argument separated by '='
 --> $DIR/config_namespace_invalid_2.rs:3:25
  |
3 | #[ink::trait_definition(namespace)]
  |                         ^^^^^^^^^
